created svg icons components and edited files

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@svgr/cli": "^5.3.1",
         "babel-jest": "^25.3.0",
         "eslint": "^6.8.0",
+        "firebase": "^7.14.1",
         "jest": "^25.3.0",
         "metro-react-native-babel-preset": "^0.59.0",
         "react-test-renderer": "16.11.0"
