--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-native-safe-area-context": "^0.7.3",
         "react-native-screens": "^2.5.0",
         "react-native-svg": "^12.1.0",
+        "react-native-vector-icons": "^6.6.0",
         "styled-components": "^5.1.0",
         "styled-system": "^5.1.5"
     },
@@ -39,5 +40,10 @@
     },
     "jest": {
         "preset": "react-native"
+    },
+    "rnpm": {
+        "assets": [
+            "./assets/fonts/"
+        ]
     }
 }
