--- a/ios/Podfile
+++ b/ios/Podfile
@@ -79,6 +79,8 @@ target 'translatorApp' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-voice', :path => '../node_modules/@react-native-community/voice'
+
   target 'translatorAppTests' do
     inherit! :complete
     # Pods for testing
