--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@babel/plugin-proposal-optional-chaining": "^7.9.0",
         "@babel/runtime": "^7.9.2",
         "@react-native-community/eslint-config": "^1.1.0",
+        "@react-native-community/voice": "^1.1.3",
         "@svgr/cli": "^5.3.1",
         "babel-jest": "^25.3.0",
         "eslint": "^6.8.0",
